added team and leistungen.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Kinesitherapie Ingo Pauls - Fuer Sie da!">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/logo.webp">
     <title>Kinesitherapie Ingo Pauls</title>
   </head>
   <body>
