Fix spelling and accentuation in meta description and title

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Kinesitherapie Ingo Pauls - Fuer Sie da!">
+  <meta name="description" content="Kinésithérapie Ingo Pauls - Für Sie da!">
   <link rel="icon" href="/images/logo.webp">
-  <title>Kinesitherapie Ingo Pauls</title>
+  <title>Kinésithérapie Ingo Pauls</title>
 </head>
 
 <body>
