Update SEO metadata and localization

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Kinésithérapie Ingo Pauls - Für Sie da!">
+  <meta name="description"
+    content="Kinésithérapie in Luxemburg – Ingo Pauls. Individuelle, ganzheitliche Behandlung für Schmerzlinderung und Beweglichkeit.">
   <link rel="icon" href="/images/logo.webp">
-  <title>Kinésithérapie Ingo Pauls</title>
+  <title>Kinésithérapie Ingo Pauls – Physiotherapie in Luxemburg</title>
 </head>
 
 <body>
