--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="description"
     content="Kinésithérapie in Luxemburg – Ingo Pauls. Individuelle, ganzheitliche Behandlung für Schmerzlinderung und Beweglichkeit.">
-  <link rel="icon" href="/images/logo.webp">
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+  <link rel="manifest" href="/site.webmanifest">
   <title>Kinésithérapie Ingo Pauls – Physiotherapie in Luxemburg</title>
 </head>
 
